--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,23 @@
         height: 100%;
         margin: 0;
         padding: 0;
+        font-family: sans-serif;
+        font-size: 1em;
+      }
+      input[type=text] {
+        font-family: sans-serif;
+        font-size: 0.9em;
+        border-radius: .3em;
+      }
+      button {
+        border-radius: .3em;
+        background: #e6e6e6;
+        border: 1px solid black;
+      }
+
+      button:hover {
+        background: white;
+        border: 1px solid black;
       }
     </style>
   </head>
